# api-flask-flasgger

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
apps/backend/: pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 001_criar_tabelas.py  002_motor_progresso.py
apps/backend/src/: .env.example  app.py  models.py
apps/backend/src/routes/: health.py  materiais.py  resgates.py  sacolas.py  supermercados.py
apps/backend/src/schemas/: material_schema.py  resgate_schema.py  sacola_schema.py  supermercado_schema.py
apps/backend/src/scripts/: seed.py
