[project]
name = "api-flask-flasgger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flasgger>=0.9.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.12.5",
    "flask-sqlalchemy>=3.1.1",   # ORM
    "psycopg2-binary>=2.9.11",   # Driver PostgreSQL
    "alembic>=1.15.0",           # Migrations
]

[tool.uv.workspace]
members = [
    "apps/backend",
]
